# estimating_gen_mc_simulation

./: .gitignore  README.md  main.py  pyproject.toml
queueing-MC/: DefectSimulation.py  backlog_simulation.py  defectRemediation_main_v2.py  defectSimulation_v3.py  initialize_simulation.py  pyproject.toml  queueing_main.py  visualize_simulation.py  visualize_simulation_v2.py
queueing-MC/research/: defectRemediation_main_debug.ipynb
queueless-MC/: BuildHistories.py  ControlTypes.py  DefectRemediation_queueless.ipynb  DefectRemediation_queueless_OAT.ipynb  DefectRemediation_queueless_OAT_v2.ipynb  DefectRemediation_queueless_OAT_v2_pl.ipynb  DefectType.py  DeltaSimulation.py  LogEntry.py  delta_table_simulation.py  fastWorkFlow_test.ipynb  fastworkflow_build.py  initialize_simulation_ql.py  pyproject.toml  queueing_build.py  queueless_main.py
queueless-MC/defect_remediation_estimation_service/: fastWorkFlow_test.ipynb  fastWorkFlow_test.py  fastWorkFlow_test.xlsx  fastWorkFlow_test_v2.json
queueless-MC/fWF_estimation/: fastWorkFlow_test.ipynb  fastWorkFlow_test.json  fastWorkFlow_test.md  fastWorkFlow_test.py  fastWorkFlow_test_pd.py
queueless-MC/queueless-MC/: DefectSimulation.py  backlog_simulation.py  initialize_simulation.py  queueing_main.py  visualize_simulation.py
queueless-MC/research/: DefectRemediation_queueless.ipynb  DefectRemediation_queueless_OAT.ipynb  DefectRemediation_queueless_OAT_v2.ipynb  DefectRemediation_queueless_OAT_v2_pl.ipynb  fastworkflow_test.json
queueless-MC/simulations/: deltas_df.csv  deltas_df.json  empirical_dict.pkl  (+5 more)
(+20 files in other folders)
