[project]
name = "queueless-mc"
version = "0.1.0"
description = "Timeline and state change estimations with a queueless black box generalized Monte Carlo method based on empirical data"
readme = "../README.md"
requires-python = ">=3.12"
dependencies = [
    "argparse>=1.4.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "scipy>=1.16.0",
]
